--- a/.gitignore
+++ b/.gitignore
@@ -22,3 +22,14 @@
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
 replay_pid*
+
+# Ignora Obsidian cache
+.obsidian/
+
+# Ignora Gradle build e binari
+.gradle/
+build/
+bin/
+
+# Ignora VSCode workspace configs
+.vscode/
