--- a/configDBConnection.ini
+++ b/configDBConnection.ini
@@ -1,5 +1,5 @@
 ;key1=jdbc:sqlserver://DBSRV02:1433;databaseName=EdmDb_2008_001;user=PDMUser;password=edm2008;encrypt=false;trustServerCertificate=false;loginTimeout=30;
-key1=jdbc:sqlserver://DBSRV02:1433;databaseName=EdmDb_2008_001;encrypt=true;trustServerCertificate=true
-user=PDMUser
-psw=edm2008
-;key1=jdbc:mysql://localhost:3306/DesFusion?user=root&password=
+;key1=jdbc:sqlserver://DBSRV02:1433;databaseName=EdmDb_2008_001;encrypt=true;trustServerCertificate=true
+;user=PDMUser
+;psw=edm2008
+key1=jdbc:mysql://localhost:3306/DesFusion?user=root&password=
