--- a/configDBConnection.ini
+++ b/configDBConnection.ini
@@ -1,4 +1,4 @@
 ;key1=jdbc:sqlserver://DBSRV02:1433;databaseName=EdmDb_2008_001;encrypt=true;trustServerCertificate=true
 ;user=root
 ;psw=
-;key1=jdbc:mysql://localhost:3306/DesFusion?user=root&password=
+key1=jdbc:mysql://localhost:3306/DesFusion?user=root&password=
