--- a/configDBConnection.ini
+++ b/configDBConnection.ini
@@ -1,5 +1,4 @@
-key1=jdbc:sqlserver://DBSRV02:1433;databaseName=EdmDb_2008_001;user=PDMUser;password=PDMUser;encrypt=false;trustServerCertificate=true;loginTimeout=30;
 ;key1=jdbc:sqlserver://DBSRV02:1433;databaseName=EdmDb_2008_001;encrypt=true;trustServerCertificate=true
-;user=PDMUser
-;psw=pdmuser
-;key1=jdbc:mysql://localhost:3306/DesFusion?user=root&password=
+;user=root
+;psw=
+key1=jdbc:mysql://localhost:3306/DesFusion?user=root&password=
